--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <style>
 html {
 	font-size: 32px;
+	color-scheme: dark;
 }
 .clock {
 	font-family: monospace;
@@ -20,13 +21,24 @@ html {
 </head>
 
 <body>
+	<div style="display: flex; flex-direction: row; justify-content: space-between;">
+		<div>
+			Auckland:
+			<p id="auckland" class="clock"></p>
+		</div>
+		<div>
+			Berkely:
+			<p id="berkely" class="clock"></p>
+		</div>
+	</div>
 	<script>
 		window.onload = displayClock();
 		function displayClock() {
 			const date = new Date()
 			const auckland = date.toLocaleTimeString('en-GB', {timeZone: 'Pacific/Auckland'});
 			const berkely = date.toLocaleTimeString('en-GB', {timeZone: 'US/Pacific'});
-			document.body.innerHTML = "Auckland:\t<p class=\"clock\">" + auckland + "</p><br>Berkely:\t<p class=\"clock\">" + berkely + "</p>";
+			document.getElementById("auckland").innerHTML = auckland
+			document.getElementById("berkely").innerHTML = berkely
 			setTimeout(displayClock, 1000);
 		}
 	</script>
