--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 			settings</button>
 	</div>
 	<div>
-		GB:
+		CEST:
 		<p id="berkeley" class="clock"></p>
 	</div>
 	<script>
 		let settings = {
-			hr24: false,
+			hr24: true,
 			light: false,
 			showDate: false,
 			showSeconds: false
@@ -118,12 +118,12 @@
 			const seconds = settings.showSeconds ? {second: '2-digit'} : {}
 			let auckland = date.toLocaleString(settings.hr24 ? 'en-GB' : 'en-US', {timeZone: 'Pacific/Auckland', hour: '2-digit', minute: '2-digit', ...seconds});
 			let berkeley = date.toLocaleString(settings.hr24 ? 'en-GB' : 'en-US', {timeZone: 'US/Pacific', hour: '2-digit', minute: '2-digit', ...seconds});
-			let gb = date.toLocaleString(settings.hr24 ? 'en-GB' : 'en-US', {timeZone: 'Europe/London', hour: '2-digit', minute: '2-digit', ...seconds});
+			let gb = date.toLocaleString(settings.hr24 ? 'en-GB' : 'en-US', {timeZone: 'Europe/Berlin', hour: '2-digit', minute: '2-digit', ...seconds});
 
 			if (settings.showDate) {
 				const aucklandDate = date.toLocaleDateString(undefined, {timeZone: 'Pacific/Auckland', weekday: 'short', month: 'short', day: 'numeric'})
 				const berkeleyDate = date.toLocaleDateString(undefined, {timeZone: 'US/Pacific', weekday: 'short', month: 'short', day: 'numeric'})
-				const gbDate = date.toLocaleDateString(undefined, {timeZone: 'Europe/London', weekday: 'short', month: 'short', day: 'numeric'})
+				const gbDate = date.toLocaleDateString(undefined, {timeZone: 'Europe/Berlin', weekday: 'short', month: 'short', day: 'numeric'})
 
 				auckland = `${auckland}<span class="date">${aucklandDate}</span>`
 				berkeley = `${berkeley}<span class="date">${berkeleyDate}</span>`
