--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			settings</button>
 	</div>
 	<div>
-		CEST:
+		Berkeley (PST):
 		<p id="berkeley" class="clock"></p>
 	</div>
 	<script>
@@ -118,22 +118,17 @@
 			const seconds = settings.showSeconds ? {second: '2-digit'} : {}
 			let auckland = date.toLocaleString(settings.hr24 ? 'en-GB' : 'en-US', {timeZone: 'Pacific/Auckland', hour: '2-digit', minute: '2-digit', ...seconds});
 			let berkeley = date.toLocaleString(settings.hr24 ? 'en-GB' : 'en-US', {timeZone: 'US/Pacific', hour: '2-digit', minute: '2-digit', ...seconds});
-			let gb = date.toLocaleString(settings.hr24 ? 'en-GB' : 'en-US', {timeZone: 'Europe/Berlin', hour: '2-digit', minute: '2-digit', ...seconds});
 
 			if (settings.showDate) {
 				const aucklandDate = date.toLocaleDateString(undefined, {timeZone: 'Pacific/Auckland', weekday: 'short', month: 'short', day: 'numeric'})
 				const berkeleyDate = date.toLocaleDateString(undefined, {timeZone: 'US/Pacific', weekday: 'short', month: 'short', day: 'numeric'})
-				const gbDate = date.toLocaleDateString(undefined, {timeZone: 'Europe/Berlin', weekday: 'short', month: 'short', day: 'numeric'})
 
 				auckland = `${auckland}<span class="date">${aucklandDate}</span>`
 				berkeley = `${berkeley}<span class="date">${berkeleyDate}</span>`
-				gb = `${berkeley}<span class="date">${gbDate}</span>`
 			}
 
 			document.getElementById("auckland").innerHTML = auckland
-			// NOTE: temp!
-			// document.getElementById("berkeley").innerHTML = berkeley
-			document.getElementById("berkeley").innerHTML = gb
+			document.getElementById("berkeley").innerHTML = berkeley
 		}
 
 		async function clockLoop() {
