--- a/index.html
+++ b/index.html
@@ -11,17 +11,83 @@
 			font-size: 16px;
 		}
 
+		@font-face {
+			font-family: 'supply';
+			font-weight: 400;
+			src: url('font.otf') format('opentype');
+			font-display: swap;
+		}
+
+		@font-face {
+			font-family: 'supplylight';
+			font-weight: 200;
+			src: url('light.otf') format('opentype');
+			font-display: swap;
+		}
+
+		@media (prefers-color-scheme: light) {
+			:root {
+				--bg: #E5E5E5;
+				--text: #262626;
+				--grey: #5C5C5C;
+			}
+
+			.block {
+				box-shadow: inset -6px -6px 4px rgba(255, 255, 255, 0.24), inset 2px 2px 4px rgba(0, 0, 0, 0.2);
+			}
+
+			.clock {
+				text-shadow: 1px 1px 8px rgba(255, 255, 255, 0.08);
+			}
+		}
+
+		@media (prefers-color-scheme: dark) {
+			:root {
+				--bg: #262626;
+				--text: #E5E5E5;
+				--grey: #959595;
+			}
+
+			.block {
+				box-shadow: inset -4px -4px 4px rgba(229, 229, 229, 0.04), inset 4px 4px 6px rgba(0, 0, 0, 0.48);
+			}
+
+			.clock {
+				text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.16);
+			}
+		}
+
+		.block {
+			margin: 10px;
+			padding: 24px 18px 10px 18px;
+			background: var(--bg);
+			border-radius: 12px;
+			min-width: 170px;
+		}
+
+		.block * {
+			text-align: center;
+		}
+
+		.clock, .date {
+			margin: 0; padding: 0;
+		}
+
 		.clock {
-			font-family: 'consolas', monospace;
-			font-size: 32px;
-			margin: 12px;
-			display: inline;
+			font-family: supply, monospace;
+			font-size: 36px;
+			letter-spacing: -0.01em;
+			color: var(--text);
+			line-height: 16px;
 		}
 
 		.date {
-			font-size: 12px;
-			font-family: sans-serif;
-			margin-left: 8px;
+			font-family: supplylight, monospace;
+			font-size: 8px;
+			letter-spacing: -0.03em;
+			color: var(--grey);
+			font-weight: 700;
+			line-height: 12px;
 		}
 
 		#settings {
@@ -40,18 +106,16 @@
 
 		body {
 			margin: 0;
-			padding: 8px;
-			max-height: calc(100% - 16px);
-			/* I hate CSS so much */
+			background-color: var(--bg);
 		}
 	</style>
 </head>
 
 <body style="display: flex; flex-direction: row; justify-content: space-between;">
-	<div>
-		Auckland:
+	<div class="block">
 		<p id="auckland" class="clock"></p>
 	</div>
+
 	<div id="settings" style="display: none;">
 		<legend>Settings</legend>
 		<label>
@@ -73,8 +137,8 @@
 		<button type="button" onclick="document.getElementById('settings').style['display'] = 'none'">Close
 			settings</button>
 	</div>
-	<div>
-		Berkeley (PST):
+
+	<div class="block">
 		<p id="berkeley" class="clock"></p>
 	</div>
 	<script>
@@ -119,13 +183,11 @@
 			let auckland = date.toLocaleString(settings.hr24 ? 'en-GB' : 'en-US', {timeZone: 'Pacific/Auckland', hour: '2-digit', minute: '2-digit', ...seconds});
 			let berkeley = date.toLocaleString(settings.hr24 ? 'en-GB' : 'en-US', {timeZone: 'US/Pacific', hour: '2-digit', minute: '2-digit', ...seconds});
 
-			if (settings.showDate) {
-				const aucklandDate = date.toLocaleDateString(undefined, {timeZone: 'Pacific/Auckland', weekday: 'short', month: 'short', day: 'numeric'})
-				const berkeleyDate = date.toLocaleDateString(undefined, {timeZone: 'US/Pacific', weekday: 'short', month: 'short', day: 'numeric'})
+			const aucklandDate = date.toLocaleDateString(undefined, {timeZone: 'Pacific/Auckland', weekday: 'short', month: 'short', day: 'numeric'})
+			const berkeleyDate = date.toLocaleDateString(undefined, {timeZone: 'US/Pacific', weekday: 'short', month: 'short', day: 'numeric'})
 
-				auckland = `${auckland}<span class="date">${aucklandDate}</span>`
-				berkeley = `${berkeley}<span class="date">${berkeleyDate}</span>`
-			}
+			auckland = `${auckland}<br><span class="date">AUCKLAND &nbsp/&nbsp GMT+13 ${settings.showDate ? "&nbsp/&nbsp " + aucklandDate : ""} </span>`
+			berkeley = `${berkeley}<br><span class="date">BERKELEY &nbsp/&nbsp GMT-08 ${settings.showDate ? "&nbsp/&nbsp " + berkeleyDate : ""}</span>`
 
 			document.getElementById("auckland").innerHTML = auckland
 			document.getElementById("berkeley").innerHTML = berkeley
